# edge-object-detection-tensorrt

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
docs/: architecture.md  evaluation.md  optimization_notes.md
experiments/: fps_results.csv  latency_results.csv  memory_usage.csv
scripts/: benchmark_latency.py  build_trt_engine.py  export_to_onnx.py  memory_profile.py
src/inference/: onnx_infer.py  trt_infer.cpp  utils.cpp
src/postprocessing/: bbox_decode.cpp
src/preprocessing/: image_preprocess.cpp
src/streaming/: frame_sync.cpp
